modules/gdscript/tests/scripts/parser/errors/class_name_after_annotation.gd
# Error here. Annotations should be used before `class_name`, not after.
class_name WrongAnnotationPlace
@icon("res://path/to/optional/icon.svg")

func test():
	pass
